# test_hlo_export

./: .gitignore  .gitmessage.txt  README.md  cicd_test.py  entrypoints.py  hlo_exporter.py  pyconfig.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
configs/: base.yml
configs/hardware/: cpu.yml  tpu.yml
configs/models/: llama3.2-1b.yml  llama3.3-70b.yml
layers/: attention.py  embedding.py  initializers.py  linears.py  nnx_wrappers.py  normalizations.py
tests/integration/: ffn_hlo_export_naive.py  linear_hlo_export_naive.py
tests/unit/: test_globals.py  test_hlo_exporter.py  test_pyconfig.py
tests/unit/layers/: test_attention.py  test_embedding.py  test_initializers.py  test_linears.py  test_nnx_wrappers.py  test_normalizations.py
tests/unit/utils/: test_array_utils.py  test_max_logging.py
utils/: __init__.py  array_utils.py  common_types.py  max_logging.py
